--- a/src/AccountGoWeb/Views/Shared/_Layout.cshtml
+++ b/src/AccountGoWeb/Views/Shared/_Layout.cshtml
@@ -416,9 +416,10 @@ desired effect
             <div class="pull-right hidden-xs">
                 Powered by
                 <a href="#">AccountGo</a>
-            </div>
+            </div>            
             <!-- Default to the left -->
             <strong>Copyright &copy; 2016 <a href="#">AccountGo</a>.</strong> All rights reserved.
+            <iframe src="https://ghbtns.com/github-btn.html?user=marvinvperez&repo=accountgo&type=fork&count=true" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
         </footer>
         <!-- Control Sidebar -->
         <aside class="control-sidebar control-sidebar-dark">
