--- a/src/AccountGoWeb/Views/Sales/Allocate.cshtml
+++ b/src/AccountGoWeb/Views/Sales/Allocate.cshtml
@@ -16,14 +16,14 @@
                     <div class="row">
                         <div class="col-sm-4">Receipt No</div>
                         <div class="col-sm-8">
-                            @Html.DisplayFor(m => m.ReceiptId)
+                            @ViewBag.ReceiptNo
                             @Html.HiddenFor(m => m.ReceiptId)
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-4">Customer Name</div>
                         <div class="col-sm-8">
-                            @Model.CustomerId
+                            @ViewBag.CustomerName
                             @Html.HiddenFor(m => m.CustomerId)
                         </div>
                     </div>
@@ -75,9 +75,16 @@
                             @for (int i = 0; i < Model.AllocationLines.Count(); i++)
                             {
                                 <tr>
-                                    <td>@Model.AllocationLines[i].InvoiceId</td>
-                                    <td>@Model.AllocationLines[i].Amount</td>
-                                    <td>@Model.AllocationLines[i].AllocatedAmount</td>
+                                    <td>
+                                        @Model.AllocationLines[i].InvoiceId
+                                        @Html.HiddenFor(m => Model.AllocationLines[i].InvoiceId)
+                                    </td>
+                                    <td>
+                                        @Model.AllocationLines[i].Amount
+                                    </td>
+                                    <td>
+                                        @Model.AllocationLines[i].AllocatedAmount
+                                    </td>
                                     <td>
                                         <input asp-for="@Model.AllocationLines[i].AmountToAllocate" class="form-control" type="text" />
                                     </td>
