customers vendors balances

--- a/src/AccountGoWeb/Views/Purchasing/Payment.cshtml
+++ b/src/AccountGoWeb/Views/Purchasing/Payment.cshtml
@@ -74,4 +74,5 @@
                 <input class="btn btn-sm btn-primary btn-flat pull-left" type="submit" value="Save" />
             </div>
         </div>
+    </div>
 </form>
