--- a/src/AccountGoWeb/Views/Sales/Customers.cshtml
+++ b/src/AccountGoWeb/Views/Sales/Customers.cshtml
@@ -9,7 +9,7 @@
 </div>
 <script>
     var columnDefs = [
-        {headerName: "Id", field: "id", width: 50, cellRenderer: function(params) {
+        {headerName: "No", field: "no", width: 50, cellRenderer: function(params) {
             return '<a href="customer/' + params.value + '">' + params.value + '</a>';
         }},
         {headerName: "Customer Name", field: "name", width: 350},
