--- a/src/AccountGoWeb/Views/Purchasing/PurchaseOrders.cshtml
+++ b/src/AccountGoWeb/Views/Purchasing/PurchaseOrders.cshtml
@@ -11,11 +11,11 @@
 </div>
 <script>
     var columnDefs = [
-        {headerName: "Order", field: "id", width: 50},
+        {headerName: "No", field: "no", width: 50},
         {headerName: "Vendor Name", field: "vendorName", width: 350},
         {headerName: "Order Date", field: "orderDate", width: 100},
         {headerName: "Amount", field: "amount", width: 100},
-        //{headerName: "Completed", field: "completed", width: 100}
+        {headerName: "Ref no", field: "referenceNo", width: 100},
     ];
 
     var gridOptions = {
