--- a/src/AccountGoWeb/Views/Quotations/Quotations.cshtml
+++ b/src/AccountGoWeb/Views/Quotations/Quotations.cshtml
@@ -10,10 +10,11 @@
 </div>
 <script>
     var columnDefs = [
-    {headerName: "Customer No", field: "customerId", width: 50},
+    {headerName: "No", field: "no", width: 50},
     {headerName: "Customer Name", field: "customerName", width: 350},
     {headerName: "Date", field: "quotationDate", width: 100},
-    {headerName: "Amount", field: "amount", width: 100}
+    {headerName: "Amount", field: "amount", width: 100},
+    {headerName: "Ref no", field: "referenceNo", width: 100}
     ];
 
     var gridOptions = {
