--- a/src/AccountGoWeb/Views/Purchasing/PurchaseInvoices.cshtml
+++ b/src/AccountGoWeb/Views/Purchasing/PurchaseInvoices.cshtml
@@ -10,10 +10,11 @@
 </div>
 <script>
     var columnDefs = [
-        {headerName: "Invoice", field: "id", width: 50},
+        {headerName: "No", field: "no", width: 50},
         {headerName: "Vendor Name", field: "vendorName", width: 350},
         {headerName: "Invoice Date", field: "invoiceDate", width: 100},
-        {headerName: "Amount", field: "amount", width: 100}
+        {headerName: "Amount", field: "amount", width: 100},
+        {headerName: "Ref no", field: "referenceNo", width: 100}
     ];
 
     var gridOptions = {
