--- a/src/AccountGoWeb/Views/Sales/SalesInvoices.cshtml
+++ b/src/AccountGoWeb/Views/Sales/SalesInvoices.cshtml
@@ -9,10 +9,11 @@
 </div>
 <script>
     var columnDefs = [
-        {headerName: "Invoice", field: "id", width: 50},
+        {headerName: "No", field: "no", width: 50},
         {headerName: "Customer Name", field: "customerName", width: 350},
         {headerName: "Invoiced Date", field: "invoiceDate", width: 100},
-        {headerName: "Amount", field: "totalAmount", width: 100}
+        {headerName: "Amount", field: "amount", width: 100},
+        {headerName: "Ref no", field: "referenceNo", width: 100}
     ];
 
     var gridOptions = {
