--- a/src/AccountGoWeb/Views/Sales/salesorders.cshtml
+++ b/src/AccountGoWeb/Views/Sales/salesorders.cshtml
@@ -10,9 +10,10 @@
 </div>
 <script>
     var columnDefs = [
-        {headerName: "Order", field: "id", width: 50},
+        {headerName: "No", field: "no", width: 50},
         {headerName: "Customer Name", field: "customerName", width: 350},
         {headerName: "Order Date", field: "orderDate", width: 100},
+        {headerName: "Ref no", field: "referenceNo", width: 100},
         {headerName: "Amount", field: "amount", width: 100},
         {headerName: "Status", field: "status", hide: "true"}
     ];
