--- a/src/AccountGoWeb/Views/Financials/JournalEntries.cshtml
+++ b/src/AccountGoWeb/Views/Financials/JournalEntries.cshtml
@@ -11,7 +11,8 @@
     var columnDefs = [
     {headerName: "Journal", field: "id", width: 50},
     {headerName: "Voucher Type", field: "voucherType", width: 50},
-    {headerName: "Amount", field: "amount", width: 50},
+    {headerName: "Debit", field: "debitAmount", width: 50},
+    {headerName: "Credit", field: "creditAmount", width: 50},
     {headerName: "Date", field: "journalDate", width: 100},
     {headerName: "Reference No", field: "referenceNo", width: 50},
     {headerName: "Posted", field: "posted", width: 100, },
