--- a/src/AccountGoWeb/Views/Purchasing/PurchaseInvoices.cshtml
+++ b/src/AccountGoWeb/Views/Purchasing/PurchaseInvoices.cshtml
@@ -14,7 +14,12 @@
         {headerName: "Vendor Name", field: "vendorName", width: 350},
         {headerName: "Invoice Date", field: "invoiceDate", width: 100},
         {headerName: "Amount", field: "amount", width: 100},
-        {headerName: "Ref no", field: "referenceNo", width: 100}
+        {headerName: "Ref no", field: "referenceNo", width: 100},
+        {headerName: "Posted", width: 100, cellRenderer: function(val) {
+            if(val.data.posted)
+                return '<input type="checkbox" checked disabled />';
+            return '<input type="checkbox" disabled />';
+        }},
     ];
 
     var gridOptions = {
