--- a/src/AccountGoWeb/Views/Sales/CustomerAllocations.cshtml
+++ b/src/AccountGoWeb/Views/Sales/CustomerAllocations.cshtml
@@ -1,5 +1,8 @@
 ﻿<div class="col-md-12">
-    <a href="~/sales/allocate/12"><i class="fa fa-plus margin-a"></i>Allocate</a>
+    <a href="~/sales/allocate/12" class="btn">
+        <i class="fa fa-plus"></i>
+        Allocate
+    </a>
 </div>
 <div class="col-md-9">
     <div class="box">
