--- a/src/AccountGoWeb/Views/Purchasing/Vendors.cshtml
+++ b/src/AccountGoWeb/Views/Purchasing/Vendors.cshtml
@@ -1,8 +1,14 @@
 ﻿@model string
 
 <div>
-    <a href="~/purchasing/vendor"><i class="fa fa-plus margin-a"></i>New Vendor</a>
-    <a href="~/purchasing/vendor" id="linkViewVendor" class="inactiveLink"><i class="fa fa-edit margin-a"></i>View</a>
+    <a href="~/purchasing/vendor" class="btn">
+        <i class="fa fa-plus"></i>
+        New Vendor
+    </a>
+    <a href="~/purchasing/vendor" id="linkViewVendor" class="btn inactiveLink">
+        <i class="fa fa-edit"></i>
+        View
+    </a>
 </div>
 <div>
     <div id="vendors" class="ag-fresh" style="height: 400px;"></div>
@@ -28,9 +34,9 @@
     function onSelectionChanged() {
         var selectedRows = gridOptions.api.getSelectedRows();
         selectedRow = selectedRows[0];
-        
+
         document.getElementById('linkViewVendor').setAttribute('href', 'vendor/' + selectedRow.id);
-        document.getElementById('linkViewVendor').setAttribute('class', '');
+        document.getElementById('linkViewVendor').setAttribute('class', 'btn');
     }
 
     // wait for the document to be loaded, otherwise
