--- a/src/AccountGoWeb/Views/Sales/SalesInvoices.cshtml
+++ b/src/AccountGoWeb/Views/Sales/SalesInvoices.cshtml
@@ -1,8 +1,14 @@
 ﻿@model string
 
 <div>
-    <a href="~/sales/addsalesinvoice"><i class="fa fa-plus margin-a"></i>New Invoice</a>
-    <a href="~/sales/salesinvoice" id="linkViewInvoice" class="inactiveLink"><i class="fa fa-edit margin-a"></i>View</a>
+    <a href="~/sales/addsalesinvoice" class="btn">
+        <i class="fa fa-plus"></i>
+        New Invoice
+    </a>
+    <a href="~/sales/salesinvoice" id="linkViewInvoice" class="btn inactiveLink">
+        <i class="fa fa-edit"></i>
+        View
+    </a>
 </div>
 <div>
     <div id="salesinvoices" class="ag-fresh" style="height: 400px;"></div>
@@ -33,9 +39,9 @@
     function onSelectionChanged() {
         var selectedRows = gridOptions.api.getSelectedRows();
         selectedRow = selectedRows[0];
-        
+
         document.getElementById('linkViewInvoice').setAttribute('href', 'salesinvoice?invoiceId=' + selectedRow.id);
-        document.getElementById('linkViewInvoice').setAttribute('class', '');
+        document.getElementById('linkViewInvoice').setAttribute('class', 'btn');
     }
 
     // wait for the document to be loaded, otherwise
