--- a/src/AccountGoWeb/wwwroot/adminLTE/css/AdminLTEOverride.css
+++ b/src/AccountGoWeb/wwwroot/adminLTE/css/AdminLTEOverride.css
@@ -27,16 +27,15 @@
    pointer-events: none;
    opacity: 0.65;
    filter: alpha(opacity=65);
-   color:gray;
-   cursor: default;
+   color:#cabfbf;   
 }
 
 .pull-right{
     float: right;
 }
 
-.disabled {
-  pointer-events: none;
-  opacity: 0.65;
-  filter: alpha(opacity=65);
+.disabledControl {
+   pointer-events: none;
+   opacity: 0.95;
+   filter: alpha(opacity=65);
 }
