--- a/src/AccountGoWeb/Views/Sales/salesorders.cshtml
+++ b/src/AccountGoWeb/Views/Sales/salesorders.cshtml
@@ -24,7 +24,7 @@
         {headerName: "Order Date", field: "orderDate", width: 100},
         {headerName: "Ref no", field: "referenceNo", width: 100},
         {headerName: "Amount", field: "amount", width: 100},
-        {headerName: "Status", field: "status", hide: "true"}
+        {headerName: "Status", field: "status", width: 100}
     ];
 
     var gridOptions = {
