--- a/src/AccountGoWeb/Views/Financials/GeneralLedger.cshtml
+++ b/src/AccountGoWeb/Views/Financials/GeneralLedger.cshtml
@@ -3,29 +3,83 @@
 <div>
 </div>
 <div>
-    <div id="masterGL" class="ag-fresh" style="height: 400px;"></div>
+    <div id="masterGL" class="ag-blue"></div>
 </div>
 <script>
-    var columnDefs = [
-    {headerName: "GL", field: "id", width: 50},
-    {headerName: "Account", field: "accountName", width: 350},
-    {headerName: "Transaction No", field: "transactionNo", width: 100},
-    {headerName: "Date", field: "date", width: 250},
-    {headerName: "Debit", field: "debit", width: 100},
-    {headerName: "Credit", field: "credit", width: 100}
-    ];
+ 
 
+    var columnDefs = [
+    {headerName: "Group", cellRenderer: 'group'},
+    //{headerName: "Account", field: "id", width: 50},
+    {headerName: "GL", field: "id", width: 100, callRenderer : function (val) {
+        return val.data.id == 0 || val.data.id  ? '' : val.data.GL;
+    }},
+    {headerName: "Account", field: "accountName", width: 350, cellRenderer: function(val){
+ 
+        if(val.data.length > 0)
+            return "";
+        return val.data.accountName;
+    }},
+    {headerName: "Transaction No", field: "transactionNo", width: 100},
+
+    {headerName: "Date", field: "date", width: 250, cellRenderer: function(val){
+        if(val.data.length > 0)
+            return val.data.date;
+        return val.data.date;
+    }},
+    {headerName: "Debit", field: "debit", width: 100, cellRenderer: function(val){
+        if(val.data.length > 0)
+            return val.data.debit;
+        return val.data.debit;
+    }},
+    {headerName: "Credit", field: "credit", width: 100, cellRenderer: function(val){
+        if(val.data.length > 0)
+            return val.data.credit  == 'undefined' ? '' : val.data.credit;
+        return val.data.credit;
+    }}
+    ];
+    var xx;
     var gridOptions = {
         columnDefs: columnDefs,
         rowData: @Html.Raw(Model),
+        getNodeChildDetails: function(data) {
+            console.log(data.GroupId);
+            console.log(data);
+            if (data.childMasterGeneralLedger.length > 0) {
+                return {
+                    group: true,
+                    children: data.childMasterGeneralLedger,
+                    key: data.groupId
+                };
+            } else {
+                return null;
+            }
+        },
+        icons: {
+            groupExpanded: '<i class="fa fa-minus-square-o"/>',
+            groupContracted: '<i class="fa fa-plus-square-o"/>'
+        },
         // PROPERTIES
-        rowSelection: 'multiple',
+        rowSelection: 'single',
+        enableFilter: true,
+        enableColResize: true,
     };
+
+ 
+
+    function autoSizeAll() {
+        var allColumnIds = [];
+        columnDefs.forEach( function(columnDef) {
+            allColumnIds.push(columnDef.field);
+        });
+        gridOptions.columnApi.autoSizeColumns(allColumnIds);
+    }
 
     // wait for the document to be loaded, otherwise
     // ag-Grid will not find the div in the document.
     document.addEventListener("DOMContentLoaded", function() {
         var eGridDiv = document.querySelector('#masterGL');
         new agGrid.Grid(eGridDiv, gridOptions);
+        autoSizeAll();
     });
 </script>
